[gd_scene load_steps=6 format=3 uid="uid://k8rarsiuuclm"]

[ext_resource type="Texture2D" uid="uid://ct2hohhi681sa" path="res://assets/ui/portrait.png" id="1_bma8u"]
[ext_resource type="Script" uid="uid://bqqttmo1nc0s6" path="res://scenes/ui/game_ui.gd" id="1_ru5ln"]
[ext_resource type="Texture2D" uid="uid://bch8jh3ol8b1r" path="res://assets/ui/portrait_clip_mask.png" id="2_fct72"]
[ext_resource type="Texture2D" uid="uid://ba4vy0rfrn6ag" path="res://scenes/entities/player/test.png" id="3_ru5ln"]
[ext_resource type="Texture2D" uid="uid://dygl6ixkb8wom" path="res://assets/weapons/Ammo.png" id="4_fct72"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_ru5ln")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Player1HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Player1HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
texture = ExtResource("1_bma8u")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Player1HBoxContainer/TextureRect"]
clip_children = 1
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
texture = ExtResource("2_fct72")

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/Player1HBoxContainer/TextureRect/TextureRect"]
position = Vector2(13, 10)
scale = Vector2(3, 3)
texture = ExtResource("3_ru5ln")
hframes = 4
vframes = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Player1HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Player1HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Player1HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/Player1HBoxContainer/VBoxContainer/HBoxContainer/TextureRect"]
position = Vector2(15, 14)
scale = Vector2(2, 2)
texture = ExtResource("4_fct72")

[node name="Label" type="Label" parent="MarginContainer/Player1HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "10 / 500"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/Player1HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 16
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Player2HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Player2HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
texture = ExtResource("1_bma8u")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Player2HBoxContainer/TextureRect"]
clip_children = 1
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
texture = ExtResource("2_fct72")

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/Player2HBoxContainer/TextureRect/TextureRect"]
position = Vector2(13, 10)
scale = Vector2(3, 3)
texture = ExtResource("3_ru5ln")
hframes = 4
vframes = 4
frame = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Player2HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Player2HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Player2HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/Player2HBoxContainer/VBoxContainer/HBoxContainer/TextureRect"]
position = Vector2(15, 14)
scale = Vector2(2, 2)
texture = ExtResource("4_fct72")

[node name="Label" type="Label" parent="MarginContainer/Player2HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "10 / 500"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/Player2HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 16
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Player3HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Player3HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
texture = ExtResource("1_bma8u")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Player3HBoxContainer/TextureRect"]
clip_children = 1
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
texture = ExtResource("2_fct72")

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/Player3HBoxContainer/TextureRect/TextureRect"]
position = Vector2(13, 10)
scale = Vector2(3, 3)
texture = ExtResource("3_ru5ln")
hframes = 4
vframes = 4
frame = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Player3HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Player3HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Player3HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/Player3HBoxContainer/VBoxContainer/HBoxContainer/TextureRect"]
position = Vector2(15, 14)
scale = Vector2(2, 2)
texture = ExtResource("4_fct72")

[node name="Label" type="Label" parent="MarginContainer/Player3HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "10 / 500"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/Player3HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 16
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Player4HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Player4HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
texture = ExtResource("1_bma8u")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Player4HBoxContainer/TextureRect"]
clip_children = 1
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
texture = ExtResource("2_fct72")

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/Player4HBoxContainer/TextureRect/TextureRect"]
position = Vector2(13, 9)
scale = Vector2(3, 3)
texture = ExtResource("3_ru5ln")
hframes = 4
vframes = 4
frame = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Player4HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Player4HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Player4HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/Player4HBoxContainer/VBoxContainer/HBoxContainer/TextureRect"]
position = Vector2(15, 14)
scale = Vector2(2, 2)
texture = ExtResource("4_fct72")

[node name="Label" type="Label" parent="MarginContainer/Player4HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "10 / 500"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/Player4HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 16
max_value = 1.0
value = 0.5
show_percentage = false
